--- a/index.html
+++ b/index.html
@@ -27,15 +27,6 @@
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-    <!-- Galeri Css -->
-    <link href="vendor/aos/aos.css" rel="stylesheet">
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="css/galeri.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -146,12 +137,12 @@
                 <div class="col-lg-6">
                     <div class="row g-3">
                         <div class="col-6 text-end">
-                            <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s" src="img/about-1.jpg" alt="">
-                            <img class="img-fluid bg-white w-50 wow fadeIn" data-wow-delay="0.2s" src="img/about-3.jpg" alt="">
+                            <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s" src="img/about-1.svg" alt="">
+                            <img class="img-fluid bg-white w-50 wow fadeIn" data-wow-delay="0.2s" src="img/about-2.svg" alt="">
                         </div>
                         <div class="col-6">
-                            <img class="img-fluid bg-white w-50 mb-3 wow fadeIn" data-wow-delay="0.3s" src="img/about-4.jpg" alt="">
-                            <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/about-2.jpg" alt="">
+                            <img class="img-fluid bg-white w-50 mb-3 wow fadeIn" data-wow-delay="0.3s" src="img/about-4.svg" alt="">
+                            <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/about-3.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -163,7 +154,7 @@
                     </div>
                     <div class="row g-3 mb-4">
                         <div class="col-sm-4">
-                            <img class="img-fluid bg-white w-100" src="img/about-5.jpg" alt="">
+                            <img class="img-fluid bg-white w-100" src="img/starsup.png" alt="">
                         </div>
                         <div class="col-sm-8">
                             <h5>STARSUP</h5>
@@ -183,7 +174,7 @@
                             <a href="" class="btn btn-primary rounded-pill py-1 px-5">Kenali Lebih Lanjut >></a>
                         </div>
                         <div class="col-sm-4">
-                            <img class="img-fluid bg-white w-100" src="img/about-6.jpg" alt="">
+                            <img class="img-fluid bg-white w-100" src="img/entepener.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -373,84 +364,75 @@
 
 
     <!-- Store Start -->
-    <<section id="gallery" class="gallery">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Galaeri</h2>
-          <p>GALERI KITA</p>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <p class="fs-5 fw-medium fst-italic text-primary">Press Release</p>
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="store-item position-relative text-center">
+                        <img class="img-fluid" src="img/press1.svg" alt="">
+                        <div class="p-4">
+                           <!-- <div class="text-center mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                            </div> -->
+                            <h4 class="mb-3">Netters</h4>
+                            <p>Universitas Adhirajasa Reswara Sanjaya (ARS University) Memperkenalkan Chatbot untuk Pendidikan, Netters</p>
+                        </div>
+                        <div class="store-overlay">
+                            <a href="https://www.kompasiana.com/erfianjunianto/65850d76de948f4047273974/universitas-adhirajasa-reswara-sanjaya-ars-university-memperkenalkan-chatbot-untuk-pendidikan-netters?utm_source=Whatsapp&utm_medium=Refferal&utm_campaign=Sharing_Desktop" class="btn btn-primary rounded-pill py-2 px-4 m-2">More Detail <i class="fa fa-arrow-right ms-2"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="store-item position-relative text-center">
+                        <img class="img-fluid" src="img/press2.svg" alt="">
+                        <div class="p-4">
+                           <!-- <div class="text-center mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                            </div> -->
+                            <h4 class="mb-3">VAChat</h4>
+                            <p>Starsup Incubator sebagai Inkubator Bisnis di Universitas Adhirajasa Reswara Sanjaya</p>
+                        </div>
+                        <div class="store-overlay">
+                            <a href="" class="btn btn-primary rounded-pill py-2 px-4 m-2">More Detail <i class="fa fa-arrow-right ms-2"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="store-item position-relative text-center">
+                        <img class="img-fluid" src="img/press3.svg" alt="">
+                        <div class="p-4">
+                            <!--<div class="text-center mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                            </div> -->
+                            <h4 class="mb-3">Ensiklotari</h4>
+                            <p>Ensiklotari Hadir untuk Melestarikan Tari Indonesia</p>
+                        </div>
+                        <div class="store-overlay">
+                            <a href="https://www.rri.co.id/hiburan/113223/ensiklotari-hadir-untuk-melestarikan-tari-indonesia"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
+                    <a href="" class="btn btn-primary rounded-pill py-3 px-5">View More Products</a>
+                </div>
+            </div>
         </div>
-
-        <div class="row g-0" data-aos="fade-left">
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-              <a href="assets/img/gallery/1.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/1.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="150">
-              <a href="assets/img/gallery/2.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/2.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-              <a href="assets/img/gallery/3.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/3.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="250">
-              <a href="assets/img/gallery/4.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/4.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-              <a href="assets/img/gallery/5.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/5.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="350">
-              <a href="assets/img/gallery/6.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/6.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
-              <a href="assets/img/gallery/7.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/7.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="450">
-              <a href="assets/img/gallery/8.png" class="gallery-lightbox">
-                <img src="assets/img/gallery/8.png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section>
+    </div>
     <!-- Store End -->
 
 
@@ -458,8 +440,7 @@
     <div class="container-fluid testimonial py-5 my-5">
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium fst-italic text-white">Testimonial</p>
-                <h1 class="display-6">What our clients say about our tea</h1>
+                <p class="fs-5 fw-medium fst-italic text-white"> Kata Mereka tentang StARSup dan EntreprenARS</p>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.5s">
                 <div class="testimonial-item p-4 p-lg-5">
@@ -503,7 +484,7 @@
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary"> Contact</p>
-                <h1 class="display-7">ika ada pertanyaan, Hubungi kami</h1>
+                <h1 class="display-7">Jika ada pertanyaan, Hubungi kami</h1>
             </div>
             <div class="row justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-8">
@@ -512,7 +493,7 @@
                             <div class="btn-square mx-auto mb-3">
                                 <i class="fa fa-envelope fa-2x text-white"></i>
                             </div>
-                            <p class="mb-2">info@example.com</p>
+                            <p class="mb-2">starsup425@ars.ac.id</p>
                         </div>
                         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
                             <div class="btn-square mx-auto mb-3">
@@ -607,44 +588,6 @@
             pause: 'hover' // Untuk memberhentikan otomatisasi saat kursor berada di atas slider
           });
         });
-
-        $(document).ready(function(){
-            $(".scroll-down").on('click', function(event) {
-              if (this.hash !== "") {
-                event.preventDefault();
-        
-                // Ambil lokasi hash dan pindahkan scroll ke elemen dengan ID yang sesuai
-                var hash = this.hash;
-                $('html, body').animate({
-                  scrollTop: $(hash).offset().top
-                }, 800, function(){
-                  // window.location.hash = hash; // Hapus baris ini agar tidak memperbarui hash URL
-                });
-              }
-            });
-        
-            // Scroll ke bagian "About" saat halaman dimuat
-            var aboutSection = $("#about");
-            if (aboutSection.length > 0) {
-              $('html, body').animate({
-                scrollTop: aboutSection.offset().top
-              }, 800);
-            }
-
-            var aboutSection = $("#product");
-            if (aboutSection.length > 0) {
-              $('html, body').animate({
-                scrollTop: aboutSection.offset().top
-              }, 800);
-            }
-
-            var aboutSection = $("#store");
-            if (aboutSection.length > 0) {
-              $('html, body').animate({
-                scrollTop: aboutSection.offset().top
-              }, 800);
-            }
-          });
       </script>
 
     <!-- Template Javascript -->
