--- a/startup.html
+++ b/startup.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ARS</title>
+    <title>PIB ARS UNIVERSITY | STARSUP</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/Logo-ars.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -153,45 +153,45 @@
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary1">Informasi</p>
-                <h1 class="display-7">Bisnis Digital</h1>
+                <h1 class="display-7">Bisnis Digital 2023</h1>
             </div>
             <div class="owl-carousel product-carousel wow fadeInUp" data-wow-delay="0.5s">
-                <a href="" class="d-block product-item rounded">
+                <a href="https://netters.id" class="d-block product-item rounded">
                     <img src="img/product-1.png" alt="">
                     <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
                         <h4 class="text-primary1">Netters</h4>
                         <span class="text-body"><strong>Netters</strong>: Program AI untuk mahasiswa ARS University, memberikan informasi perkuliahan melalui percakapan teks.</span>
                     </div>
                 </a>
-                <a href="" class="d-block product-item rounded">
+                <a href="https://vachat.id" class="d-block product-item rounded">
                     <img src="img/product-2.png" alt="">
                     <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
                         <h4 class="text-primary1">VaChat</h4>
                         <span class="text-body"><strong>VAChat</strong>: Chatbot AI untuk percakapan berbasis teks di WhatsApp,memberikan respons relevan dengan kecerdasan buatan.</span>
                     </div>
                 </a>
-                <a href="" class="d-block product-item rounded">
+                <a href="https://tekku.id" class="d-block product-item rounded">
                     <img src="img/product-3.png" alt="">
                     <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
                         <h4 class="text-primary1">Tekku</h4>
                         <span class="text-body"><strong>Tekku</strong>: Platform perbaikan elektronik terjangkau,handal,dan transparan.Teknologi untuk biaya,proses perbaikan,dan suku cadang.</span>
                     </div>
                 </a>
-                <a href="" class="d-block product-item rounded">
+                <a href="https://aqibers.id" class="d-block product-item rounded">
                     <img src="img/product-4.png" alt="">
                     <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
                         <h4 class="text-primary1">Aqibers</h4>
                         <span class="text-body"><strong>Aqibers</strong>:Platform online aqiqah dengan akses mudah,hewan berkualitas,termasuk pengiriman dan pemotongan sesuai syariat.</span>
                     </div>
                 </a>
-                <a href="" class="d-block product-item rounded">
+                <a href="https://edutrack.id" class="d-block product-item rounded">
                     <img src="img/product-5.png" alt="">
                     <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
                         <h4 class="text-primary1">Edu Track</h4>
                         <span class="text-body"><strong>Edutrack</strong>: Platform web bantu siswa kelas 12 pilih jurusan PTN atau PTS. Gunakan kuisoner pilihan, terhubung dengan alumni jurusan.</span>
                     </div>
                 </a>
-                <a href="" class="d-block product-item rounded">
+                <a href="https://tanara.id" class="d-block product-item rounded">
                     <img src="img/product-6.png" alt="">
                     <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
                         <h4 class="text-primary1">Tanara</h4>
@@ -199,108 +199,9 @@
                         </span>
                     </div>
                 </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-7.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Naragih</h4>
-                        <span class="text-body"><strong>Naragih</strong>:Ciptakan"Keripik Kentang Naragih".fokus anak muda.populerkan keripik kentang di kalangan anak-anak dan remaja.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-8.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Gyozhu</h4>
-                        <span class="text-body"><strong>Gyozhu</strong>:Gyoza Tahu khas Jepang dan lokal, dengan bahan tahu, sayuran, telur, dan ayam, hadirkan rasa unik.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-9.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Mochinta</h4>
-                        <span class="text-body"><strong>Mochinta</strong>Mochi Strawberry Segar Balut Coklat: Sajian kenyal, manis-asam, praktis dibawa kapan pun.
-                        </span>
-                    </div>
-                </a>
                 
             </div>
         </div>
-
-        <div class="container py-5">
-            <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium fst-italic text-primary1">Informasi</p>
-                <h1 class="display-7">Bisnis Konvesional</h1>
-            </div>
-            <div class="owl-carousel product-carousel wow fadeInUp" data-wow-delay="0.5s">
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-1.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Netters</h4>
-                        <span class="text-body"><strong>Netters</strong>: Program AI untuk mahasiswa ARS University, memberikan informasi perkuliahan melalui percakapan teks.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-2.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">VaChat</h4>
-                        <span class="text-body"><strong>VAChat</strong>: Chatbot AI untuk percakapan berbasis teks di WhatsApp,memberikan respons relevan dengan kecerdasan buatan.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-3.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Tekku</h4>
-                        <span class="text-body"><strong>Tekku</strong>: Platform perbaikan elektronik terjangkau,handal,dan transparan.Teknologi untuk biaya,proses perbaikan,dan suku cadang.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-4.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Aqibers</h4>
-                        <span class="text-body"><strong>Aqibers</strong>:Platform online aqiqah dengan akses mudah,hewan berkualitas,termasuk pengiriman dan pemotongan sesuai syariat.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-5.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Edu Track</h4>
-                        <span class="text-body"><strong>Edutrack</strong>: Platform web bantu siswa kelas 12 pilih jurusan PTN atau PTS. Gunakan kuisoner pilihan, terhubung dengan alumni jurusan.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-6.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Tanara</h4>
-                        <span class="text-body"><strong>Tanara</strong>: tawarkan properti berkualitas dan bimbingan jual beli. Platform online cepat, aman. Layanan terbaik, mitra terpercaya.
-                        </span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-7.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Naragih</h4>
-                        <span class="text-body"><strong>Naragih</strong>:Ciptakan"Keripik Kentang Naragih".fokus anak muda.populerkan keripik kentang di kalangan anak-anak dan remaja.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-8.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Gyozhu</h4>
-                        <span class="text-body"><strong>Gyozhu</strong>:Gyoza Tahu khas Jepang dan lokal, dengan bahan tahu, sayuran, telur, dan ayam, hadirkan rasa unik.</span>
-                    </div>
-                </a>
-                <a href="" class="d-block product-item rounded">
-                    <img src="img/product-9.png" alt="">
-                    <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
-                        <h4 class="text-primary1">Mochinta</h4>
-                        <span class="text-body"><strong>Mochinta</strong>Mochi Strawberry Segar Balut Coklat: Sajian kenyal, manis-asam, praktis dibawa kapan pun.
-                        </span>
-                    </div>
-                </a>
-                
-            </div>
-        </div>
-    </div>
-
 
    
 
